--- a/Practical1/writeup/writeup.tex
+++ b/Practical1/writeup/writeup.tex
@@ -117,15 +117,15 @@ Since Cosine distance works well with sparse data, it significantly improved the
 
 I read and reviewed the winning Netflix solutions, specifically, Feature-Weighted Linear Stacking\footnote{Sill, et al. http://arxiv.org/pdf/0911.0460.pdf} and Matrix Factorization Techniques\footnote{Volinsky et al. http://www2.research.att.com/~volinsky/papers/ieeecomputer.pdf}. However, as a solo Extension school student without prior \texttt{numpy} experience, I felt I did not have sufficient time to build a reliable implementation of these more sophisticated algorithms. 
 
-Interestingly, Netflix ended up using only parts of the Progress Prize stage (which already represented 2000 hours of work and a combination of 107 different algorithms). They never used the final \$1M winning solution due to the additional engineering complexity for a limited improvement in quality. More importantly, they shifted their business from predicted ratings to broader and more effective means of recommendations\footnote{http://techblog.netflix.com/2012/04/netflix-recommendations-beyond-5-stars.html}.
+Interestingly, Netflix ended up using only parts of the Progress Prize stage (which already represented 2000 hours of work and a combination of 107 different algorithms). They never used the final \$1M winning solution due to the additional engineering complexity for a limited improvement in rating prediction quality. More importantly, they shifted their business from predicted ratings to broader and more effective means of recommendations\footnote{http://techblog.netflix.com/2012/04/netflix-recommendations-beyond-5-stars.html}.
 
 \section*{Conclusion}
 
-This exercise raised some important questions about overfitting. Fairly generic algorithms for recommendations that would work well with a different data set would fail with this data set. I would imagine that even the best of class solution for this data set would fail miserably with an Amazon or Netflix sized set of data in terms of in-memory matrix realities, more sparseness of data (millions of products across hundreds of categories for example) and higher dimensionality of person and item features (buying history, multiple people per household, evolution of ratings over time). I would further research how to determine quickly the limits and appropriateness of a given algorithm to a given data set. Is it even possible to have reasonably generic learning algorithms at all? If the implementation needs significant re-writes for just the recommender class of problem, how will we tackle the great variety of potential machine learning applications?
+This exercise raised some important questions about overfitting. Fairly generic algorithms for recommendations that would work well with a different data set would fail with this data set. I would imagine that even the best of class solution for this data set would fail miserably with an Amazon or Netflix sized set of data in terms of in-memory matrix realities, more sparseness of data (millions of products across hundreds of categories for example) and higher dimensionality of person and item features (buying history, multiple people per household, evolution of ratings over time). I would further research how to determine quickly the limits and appropriateness of a given algorithm to a given data set. Is it even possible to have reasonably generic learning algorithms at all? If the implementation needs significant re-writes for just the rating prediction class of problem, how will we tackle the great variety of potential machine learning applications?
 
 I really enjoyed this exercise. The Kaggle competition was a strong motivating factor to improve my results, especially as the leaderboard varied day by day or hour by hour. The real world sparse and noisy data, was a more effective learning exercise than the packaged Octave example in my prior Coursera Machine Learning class. The need to use a systematic approach with both clean and pathological test data will be useful both in future exercises for this class as well as real world application.
 
-As an Extension student, I would have liked to have the opportunity to partner with either other Extension students or in-class students. I think this would have improved the learning rate for both me and my potential collaborators. In the Coursera class, I often learned as much from other students as from the lectures and class material. Of course, I also reciprocated with my practical experience in Machine Learning applications from my day job. Education is blending a mix of in-class and on-line learning. Like the Kaggle competition, mixing the two would be a more modern, more effective approach. Ensemble learning for the classroom!
+As an Extension student, I would have liked to have the opportunity to partner with either other Extension students or in-class students. I think this would have improved the learning rate for both me and my potential collaborators. In the Coursera class, I often learned as much from other students as from the lectures and class material. Of course, I also reciprocated with my practical experience in Machine Learning applications from my day job. Education is becoming a blend of in-class and on-line learning. Like the Kaggle competition, mixing the two would be a more modern, more effective approach. Ensemble learning for the classroom!
 
 
 \end{document}  
