--- a/Practical2/writeup/Practical2_writeup.tex
+++ b/Practical2/writeup/Practical2_writeup.tex
@@ -9,7 +9,7 @@
 \usepackage{amssymb}
 \usepackage{relsize}
 
-\title{CSCI E-181 Spring 2014 Practical 1}
+\title{CSCI E-181 Spring 2014 Practical 2}
 \author{David Wihl\\
      \texttt{davidwihl@gmail.com}}
 %\date{}							% Activate to display a given date or no date
@@ -18,23 +18,10 @@
 \maketitle
 \section*{Warm-Up}
 
-%\subsection*{Basic K-Means}
+max g-forces eyeballs out is 12g eyeballs out http://www.gforces.net/human-tolerance-horizontal.html
 
-\par As a warmup, I synthesized five clusters of data.  I then used a K-Means implementation in Octave I had written for a previous course.\footnote{Machine Learning, Coursera, Prof. Andrew Ng, Completed Jan 2014, \url{https://class.coursera.org/ml-004}} While this implementation was sufficient for the prior course's provided dataset, when I tested it with the synthesized data set, K=5 and random initial centroids, one of the centroids would frequently not converge on any points.
+helmet tests on g forces http://www.smf.org/docs/articles/hic/Various_helmets_stds.pdf
 
-\begin{figure}[h!] 
-\centering
-\includegraphics[scale=0.6]{randominitialClusters}
-\caption{Random Initial Centroids After 1 Iteration}
-\end{figure}
-
-I subsequently modified the code to use K-Medoids, choosing one of the sample data points at random as an initial centroid. This worked much better.
-
-\begin{figure}[h!]
-\centering
-\includegraphics[scale=0.6]{K-Medoid}
-\caption{K-Medoids Converge After 4 Iterations}
-\end{figure}
 
 \subsection*{CIFAR-10 Image Data}
 
