adding Zack to writeup

--- a/Practical2/writeup/Practical2_writeup.tex
+++ b/Practical2/writeup/Practical2_writeup.tex
@@ -9,18 +9,24 @@
 \usepackage{amssymb}
 \usepackage{relsize}
 
-\title{CSCI E-181 Spring 2014 Practical 2}
-\author{David Wihl\\
-     \texttt{davidwihl@gmail.com}}
+\title{CSCI 181 / E-181 Spring 2014 Practical 2}
+
+\author{
+  David Wihl\\
+  \texttt{davidwihl@gmail.com}
+  \and
+  Zack Hendlin\\
+  \texttt{zgh@mit.edu}
+}
 %\date{}							% Activate to display a given date or no date
 
 \begin{document}
 \maketitle
 \section*{Warm-Up}
 
-max g-forces eyeballs out is 12g eyeballs out http://www.gforces.net/human-tolerance-horizontal.html
+%max g-forces eyeballs out is 12g eyeballs out http://www.gforces.net/human-tolerance-horizontal.html
 
-helmet tests on g forces http://www.smf.org/docs/articles/hic/Various_helmets_stds.pdf
+%helmet tests on g forces http://www.smf.org/docs/articles/hic/Various_helmets_stds.pdf
 
 
 \subsection*{CIFAR-10 Image Data}
@@ -50,15 +56,6 @@ Normalization of the data had a dramatic effect, changing the largest cluster fr
     \end{tabular}
 \end{center}
 \fi
-
-\begin{figure}[h!]
-\centering
-\includegraphics[scale=0.6]{normalvsunnormal}
-\caption{CIFAR-10 Cluster Distribution Percentage Normalized vs. Unnormalized}
-\end{figure}
-
-
-\clearpage
 
 \section*{Recommender System}
 
