cleanup Python code; added TODO

--- a/Practical2/warmup/TODO
+++ b/Practical2/warmup/TODO
@@ -1,3 +1,5 @@
-. use common error method for Octave and Python
+. finish integration of linRegB
+. use common error method for Octave and Python in order to compare
 . clean up code
 . finish writeup
+. add README
