cleanup of Ridge complete

--- a/Practical2/warmup/README
+++ b/Practical2/warmup/README
@@ -6,8 +6,10 @@ The warmup is implemented in two parts.
 
 Part 1 - Octave / Matlab
 
-This implements a variety of methods: gradient descent, polynomial fitting,
-Gaussian / closed form, and a more sophisticated Gaussian
+This implements a variety of basis functions: 
+  linear (via gradient descent),
+  Polynomial,
+  Gaussian with Moore Penrose
 
 To run this, start Octave / Matlab and execute main.m
 
