--- a/Practical2/warmup/TODO
+++ b/Practical2/warmup/TODO
@@ -1,2 +1,5 @@
 . add error bar for python
-
+. add cross-validation
+. add NLTK feature extraction
+. potentially add new features, like actors
+. time permitting, play with different regression algorithms like SVM 
