--- a/Practical2/writeup/Practical2_writeup.tex
+++ b/Practical2/writeup/Practical2_writeup.tex
@@ -103,7 +103,9 @@ The following table summarizes our results. LWLR was reasonably simple to implem
 \section*{Predicting Movie Opening Weekend Revenues}
 
 
-\subsection*{Subsection 1}
+\subsection*{Preliminary Data Analysis}
+
+The training set consists of movie metadata and textual movie reviews. From the sample code provided in the problem, the initial set of features has a classic problem of too many dimensions (105403) for too little data (1147).  This is mostly due to the unigrams converting each word of each movie review and description into a different dimension. Eliminating the unigrams as a first step significantly improved classification results and reduced dimensionality to only(!) 11276.
 
 \subsection*{Subsection 2}
 
