Woo hoo! 15% improvement

--- a/Practical2/warmup/TODO
+++ b/Practical2/warmup/TODO
@@ -1,4 +1,11 @@
+. normalize certain features: production budget, running_time
+
 . add error bar for python plot of LWLR
 . add NLTK feature extraction
 . potentially add new features, like actors
 . time permitting, play with different regression algorithms like SVM 
+
+Things that didn't work that I expected to:
+
+SVM
+normalizing x_train
