--- a/Practical2/warmup/TODO
+++ b/Practical2/warmup/TODO
@@ -1,11 +1,6 @@
-. normalize certain features: production budget, running_time
-
+. implement full cross validation
+. find biggest error rows and diagnose it
 . add error bar for python plot of LWLR
-. add NLTK feature extraction
-. potentially add new features, like actors
+. complete writeup
+. time permitting, topic modeling
 . time permitting, play with different regression algorithms like SVM 
-
-Things that didn't work that I expected to:
-
-SVM
-normalizing x_train
