--- a/Practical2/writeup/Practical2_writeup.tex
+++ b/Practical2/writeup/Practical2_writeup.tex
@@ -105,7 +105,9 @@ The following table summarizes our results. LWLR was reasonably simple to implem
 
 \subsection*{Preliminary Data Analysis}
 
-The training set consists of movie metadata and textual movie reviews. From the sample code provided in the problem, the initial set of features has a classic problem of too many dimensions (105403) for too little data (1147).  This is mostly due to the unigrams converting each word of each movie review and description into a different dimension. Eliminating the unigrams as a first step significantly improved classification results and reduced dimensionality to only(!) 11276 TODO update down just 2!
+The training set consists of movie metadata and textual movie reviews. From the sample code provided in the problem, the initial set of features has a classic problem of too many dimensions (105403) for too little data (1147).  This is mostly due to the unigrams converting each word of each movie review and description into a different dimension.
+
+Eliminating the unigrams as a first step significantly improved classification results and reduced dimensionality to only(!) 11276 TODO update down just 2!
 
 \subsection*{Using Cross-validation}
 
@@ -113,23 +115,48 @@ To quickly evaluate the regression algorithms, we build a simple cross validatio
 
 TODO: expand to full CV
 
-\subsection*{Subsection}
+\section*{Approaches considered}
+We considered two approaches: 
+
+
+\subsection*{Feature Engineering}
+We tested a number of approaches to both add features, and to remove features which could lead to overfitting
+
+(1) Exclusion of unigrams which used actually hurt model performance
+
+(2) Testing of positive and negative wording in reviews. We recognized that while all words in a review may cause overfitting and result in statistically insignificant weight for an individual word (due to the small N in the data), some words in reviews could contain particularly high information content. As such we tested two features:
+	(A) a 'good' list: ["good", "great", "excellent", "seeing", "superb", "must-see", "fantastic", "credible", "best"]
+	(B) a 'bad' list: ["bad", "slow", "boring", "horrible", "waste", "poor", "lazy","worst"]
+Unfortunately, that didn't improve our model's performance.
+
+(3) Creation of squared values for all quantitative variables. This did not help model performance but did lead us understand that "number of screens" a movie shown on was quite predictive. We then tuned the parameter for the exponent of "number of screens" (from 2.0 to 5.0) and found 4.3 to maximize our performance on two holdout samples -- this helped our performance gains in the model significantly.
+
+(4) Creation of logs for all quantitative variables on the basis that large numbers (e.g. budgets) may have non-linear impacts on the revenues of a movie. This did not help the model's performance.
+
+(5) Threshold values as binary 1/0 values for if a film's budget was above a particular value, and if the number of threaters a movie shown in was above a particular value. We ran sensitivities to various values on the logic that there can be 'step functions' insofar as a movie with a very low budget may not be sufficiently high quality, but anything about X may be sufficient). This did not help the model's performance.
+
+\subsection*{Selection of fitting technique}
+
+We evaluated (1) ordinary least squares linear regression, (2) lasso regression (which penalizes the absolute value of regression coefficients), and (3) ridge regression (which penalizes the size of the regression coefficients). Lasso and ridge were considered to help with variable selection issues which occur with a extremely large set of potential variables for inclusion, as was the case with unigrams.
+
+
 NOTES follow:
 
 Attempts made:
-lasso, ridge, normalizing data
 evaluating features
-threshold values
-polynomial values
 removing extra features, like words, dates
 examining w to see which features were unusual or had significant weighting
 came down to two: number of screens, and production budget. We tried various polynomials of numbers of screens, with 4th power yielding minimum error
 production budgets > \$50,000,000 were deemed a "blockbuster" type as they had the largest errors, and therefore the largest penalties. Upon detailed analysis in Excel of the training data, we needed to apply a correction of 0.85 to this different category of movie. Given the large production budget, a studio can produce only a few blockbusters per year so by definition they are outliers compared to the majority of the movies. While our correction for large budget films decreased the overall error rate somewhat, it did not have as dramatic as effect as we'd hoped. Given most of the big budget films had lower openings relative to smaller budget films, we assume the studios were generally also disappointed.
 
 \section*{Conclusion}
+The key learning from this practical is that even relatively simple techniques (such as linear regression) can be extremely powerful if appropriate features are selected. 
 
-Exercise in feature engineering - to quickly weed out which features are relevant and which are noise. More sophisticated algorithms like ridge and lasso are not necessarily better as they involve tweaking normalizing values.
+'Feature engineering' ended up being key to getting reasonable results from the linear regression. For instance, introducing polynomials of numeric information was important to capturing trends in the data. We also had to grapple with how to avoid overfitting (alas, unigrams on such a small training dataset let to significant over-fitting and had poor-out-of-sample performance), and how to represent text in a meaningful way quantitatively (something which , despite trying NLTK and 'good' / 'bad' lists for the text of reviews, we never quite got much signal from).
 
+We found that what we excluded was just as important as the features we included. Poor features radically overfit and gave poor out-of-sample performance. Poor features also lacked a reasonable interpretation (e.g. what does the count of 'the' unigrams in a movie review really mean?). Another key learning was that more sophisticated algorithms like ridge and lasso are not necessarily better as they involve tweaking normalizing values.
+
+Interestingly, feature engineering consequently required us to be more thoughtful about the problem as we sought other ways to get signal from our data. 
 
 
 \end{document}  
